[www.hookamonk.com] Few text updates

--- a/www.hookamonk.com/src/html/cattering/index.njk
+++ b/www.hookamonk.com/src/html/cattering/index.njk
@@ -93,7 +93,7 @@
         </div>
         <div>
           <h3 hm-section-features__feature>Heating only by electronics</h3>
-          <p>There are no charcoals in hookamonk. All heating is made by spiral heated from electronic devices in head. Tobacco is heated same way as in classic hookah only charcoals are replaced by spiral.
+          <p>There are no charcoals in hookamonk. All heating is made by spiral heated from electronic devices in head. Tobacco is heated the same way as in classic hookah only charcoals are replaced by the spiral.
         </p>
         </div>
       </div>
@@ -106,7 +106,7 @@
         </div>
         <div>
           <h3>Smart inhale detection</h3>
-          <p>Electronic head react on inhales. When you breathe in it will warm the tobacco, when you don't smoke it remains the temperature.</p>
+          <p>Electronic head reacts to inhales. When you breathe in, it will warm the tobacco, when you don't smoke it maintains the temperature.</p>
         </div>
       </div>
       <div
@@ -118,7 +118,7 @@
         </div>
         <div>
           <h3>No staff</h3>
-          <p>You need shishaman only to fill the bowl by tobacco. There is no need to take care about charcoals and change them during the session.
+          <p>You need shishaman only to fill the bowl with tobacco. There is no need to take care about charcoals and change them during the session.
           </p>
         </div>
       </div>
@@ -179,7 +179,7 @@
         </div>
         <div>
           <h3>Intensity regulation</h3>
-          <p>If you like your hookah stronger or smoother you can change its intensity on display or in your mobile app.</p>
+          <p>Whether you like your hookah stronger or smoother, you can change its intensity on display or in your mobile app.</p>
         </div>
       </div>
       <div
@@ -191,7 +191,7 @@
         </div>
         <div>
           <h3>Compatibility with other hookahs</h3>
-          <p>Electronic head is possible to place on most usual hookahs, heat managements and bowls.</p>
+          <p>Electronic head is possible to place on most of the usual hookahs, heat managements and bowls.</p>
         </div>
       </div>
       <div
@@ -203,7 +203,7 @@
         </div>
         <div>
           <h3>Consistent taste</h3>
-          <p>With hookamonk taste of tobacco remains still the same during the session. </p>
+          <p>With hookamonk, the taste of tobacco remains still the same during the session.</p>
         </div>
       </div>
       <div
@@ -215,7 +215,7 @@
         </div>
         <div>
           <h3>Lounge app</h3>
-          <p>The Lounge App helps lounge staff to manage Hookamonk devices. It features an overview of running table sessions, monitors session run time, maintenance status and allows to remotely control the hookahs</p>
+          <p>The Lounge App helps lounge staff to manage Hookamonk devices. It features an overview of running table sessions, monitors session run time, maintenance status and allows to remotely control the hookahs.</p>
         </div>
       </div>
       <div
@@ -227,7 +227,7 @@
         </div>
         <div>
           <h3>Mobile app</h3>
-          <p>Mobile app for Android and iOS. You can use it to change intensity of your hookah or create diary with your session.</p>
+          <p>Mobile app for Android and iOS. You can use it to change intensity of your hookah or create a diary with your sessions.</p>
         </div>
       </div>
       <div
@@ -247,12 +247,12 @@
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <h3 class="hm-h2">Mobile box</h3>
-        <p>Portable version of hookamonk. It's possible to use it with any table you have. You need only source of electricity and wifi connection.</p>
+        <p>Portable version of hookamonk. It's possible to use it with any table you have. All you need is source of electricity and wifi connection.</p>
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <h3 class="hm-h2">Table</h3>
-        <p>Specific table designed for hookamonk. Display is installed in. All electronic is installed in. You only add shisha with an electronic head.</p>
+        <p>Specific table designed for hookamonk. Display is built in. All electronic is built in. You only add shisha with an electronic head.</p>
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
