--- a/www.hookamonk.com/src/stylesheets/typography.scss
+++ b/www.hookamonk.com/src/stylesheets/typography.scss
@@ -47,6 +47,14 @@ ul li {
   list-style: none;
   margin: 0;
 }
+ul.hm-formatted {
+  padding-left: 1em;
+
+  li {
+    list-style: initial;
+    margin-bottom: 0.5em;
+  }
+}
 
 //HEADINGS
 .hm-h2 {
