--- a/www.hookamonk.com/src/html/cattering/index.njk
+++ b/www.hookamonk.com/src/html/cattering/index.njk
@@ -240,19 +240,21 @@
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <img title="Hookamonk box product photo"
              alt="[photo] Hookamonk box product photo"
-             width="90%"
+             class="img-fullwidth-phone hk-img-product"
              src="{{ "hookamonk.com/img_box.png" | cloudinaryUrl(width=530) }}"
              srcset="{{ "hookamonk.com/img_box.png" | cloudinaryUrl(width=530) }} 1x,
                      {{ "hookamonk.com/img_box.png" | cloudinaryUrl(width=530,dpr=1.5) }} 1.5x,
                      {{ "hookamonk.com/img_box.png" | cloudinaryUrl(width=530,dpr=2) }} 2x" />
       </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--align-middle">
         <h3 class="hm-h2">Mobile box</h3>
         <p>Portable version of hookamonk. It's possible to use it with any table you have. All you need is source of electricity and wifi connection.</p>
       </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+    </div>
+    <div class="mdc-layout-grid__inner tm-layout-wrapper hm-section-products">
+    <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--align-middle">
         <h3 class="hm-h2">Table</h3>
         <p>Specific table designed for hookamonk. Display is built in. All electronic is built in. You only add shisha with an electronic head.</p>
       </div>
@@ -260,7 +262,7 @@
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <img title="Hookamonk table product photo"
              alt="[photo] Hookamonk table product photo"
-             width="90%"
+             class="img-fullwidth-phone hk-img-product"
              src="{{ "hookamonk.com/img_table.png" | cloudinaryUrl(width=530) }}"
              srcset="{{ "hookamonk.com/img_table.png" | cloudinaryUrl(width=530) }} 1x,
                      {{ "hookamonk.com/img_table.png" | cloudinaryUrl(width=530,dpr=1.5) }} 1.5x,
@@ -278,7 +280,7 @@
           Applications
         </h2>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--align-middle">
         <h3 class="hm-h2">
           Lounge app
         </h3>
@@ -297,12 +299,13 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
         <img title="Hookamonk mobile app"
              alt="[photo] Hookamonk mobile app"
+             class="img-fullwidth-phone"
              src="{{ "hookamonk.com/img_mobile_app.png" | cloudinaryUrl(width=647) }}"
              srcset="{{ "hookamonk.com/img_mobile_app.png" | cloudinaryUrl(width=647) }} 1x,
                      {{ "hookamonk.com/img_mobile_app.png" | cloudinaryUrl(width=647,dpr=1.5) }} 1.5x,
                      {{ "hookamonk.com/img_mobile_app.png" | cloudinaryUrl(width=647,dpr=2) }} 2x" />
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--align-middle">
         <h3 class="hm-h2">
           Mobile app
         </h3>
