[www.hookamonk.com] correct order of grid cells for mobile vs desktop

--- a/www.hookamonk.com/src/stylesheets/cattering.scss
+++ b/www.hookamonk.com/src/stylesheets/cattering.scss
@@ -79,3 +79,12 @@
     }
   }
 }
+
+@media screen and (min-width: 479px) {
+  .hm-order-desktop--2 {
+    order: 2;
+  }
+  .hm-order-desktop--1 {
+    order: 1;
+  }
+}
