--- a/www.hookamonk.com/src/html/cattering/index.njk
+++ b/www.hookamonk.com/src/html/cattering/index.njk
@@ -237,7 +237,12 @@
         <h2 class="hm-h2">Products</h2>
       </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--align-middle hm-order-desktop--2">
+        <h3 class="hm-h2">Mobile box</h3>
+        <p>Portable version of hookamonk. It's possible to use it with any table you have. All you need is source of electricity and wifi connection.</p>
+      </div>
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 hm-order-desktop--1">
         <img title="Hookamonk box product photo"
              alt="[photo] Hookamonk box product photo"
              class="img-fullwidth-phone hk-img-product"
@@ -247,13 +252,6 @@
                      {{ "hookamonk.com/img_box.png" | cloudinaryUrl(width=530,dpr=2) }} 2x" />
       </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--align-middle">
-        <h3 class="hm-h2">Mobile box</h3>
-        <p>Portable version of hookamonk. It's possible to use it with any table you have. All you need is source of electricity and wifi connection.</p>
-      </div>
-    </div>
-    <div class="mdc-layout-grid__inner tm-layout-wrapper hm-section-products">
-    <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--align-middle">
         <h3 class="hm-h2">Table</h3>
         <p>Specific table designed for hookamonk. Display is built in. All electronic is built in. You only add shisha with an electronic head.</p>
@@ -296,16 +294,8 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-desktop">
         <figure class="hm-img--lounge-app"></figure>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
-        <img title="Hookamonk mobile app"
-             alt="[photo] Hookamonk mobile app"
-             class="img-fullwidth-phone"
-             src="{{ "hookamonk.com/img_mobile_app.png" | cloudinaryUrl(width=647) }}"
-             srcset="{{ "hookamonk.com/img_mobile_app.png" | cloudinaryUrl(width=647) }} 1x,
-                     {{ "hookamonk.com/img_mobile_app.png" | cloudinaryUrl(width=647,dpr=1.5) }} 1.5x,
-                     {{ "hookamonk.com/img_mobile_app.png" | cloudinaryUrl(width=647,dpr=2) }} 2x" />
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--align-middle">
+
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--align-middle hm-order-desktop--2">
         <h3 class="hm-h2">
           Mobile app
         </h3>
@@ -316,6 +306,15 @@
           <li>Track tobaccos you've tried and keep them in diary</li>
           <li>Earn hookacoins</li>
         </ul>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop hm-order-desktop--1">
+        <img title="Hookamonk mobile app"
+             alt="[photo] Hookamonk mobile app"
+             class="img-fullwidth-phone"
+             src="{{ "hookamonk.com/img_mobile_app.png" | cloudinaryUrl(width=647) }}"
+             srcset="{{ "hookamonk.com/img_mobile_app.png" | cloudinaryUrl(width=647) }} 1x,
+                     {{ "hookamonk.com/img_mobile_app.png" | cloudinaryUrl(width=647,dpr=1.5) }} 1.5x,
+                     {{ "hookamonk.com/img_mobile_app.png" | cloudinaryUrl(width=647,dpr=2) }} 2x" />
       </div>
     </div>
   </div>
