[www.hookamonk.com] cell ordering fix

--- a/www.hookamonk.com/src/html/cattering/index.njk
+++ b/www.hookamonk.com/src/html/cattering/index.njk
@@ -251,6 +251,8 @@
                      {{ "hookamonk.com/img_box.png" | cloudinaryUrl(width=530,dpr=1.5) }} 1.5x,
                      {{ "hookamonk.com/img_box.png" | cloudinaryUrl(width=530,dpr=2) }} 2x" />
       </div>
+    </div>
+    <div class="mdc-layout-grid__inner tm-layout-wrapper hm-section-products">
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--align-middle">
         <h3 class="hm-h2">Table</h3>
