--- a/www.hookamonk.com/src/html/components/header.njk
+++ b/www.hookamonk.com/src/html/components/header.njk
@@ -53,7 +53,7 @@
         <nav id="navigation" class="tm-menu">
           <ul class="tm-menu__list">
             <li><a href="https://shop.hookamonk.com/">Accessories</a></li>
-            <li><a href="/cattering">I want it for my lounge</a></li>
+            <li><a href="/catering">I want it for my lounge</a></li>
           </ul>
         </nav>
       </div>
