--- a/www.hookamonk.com/src/html/index.njk
+++ b/www.hookamonk.com/src/html/index.njk
@@ -86,7 +86,7 @@
           <h1 class="hm-hero__header">Game changer in Hookah</h1>
           <h2 class="hm-hero__sub-header">First fully electronic hookah for tobacco</h2>
           <p>
-            <a href="/cattering" class="hm-button">I want it for my lounge</a>
+            <a href="/catering" class="hm-button">I want it for my lounge</a>
           </p>
         </section>
       </div>
