--- a/www.hookamonk.com/src/stylesheets/catering.scss
+++ b/www.hookamonk.com/src/stylesheets/catering.scss
@@ -1,8 +1,10 @@
-.hm-section-features {
-  margin-top: 1em;
+#page-hookamonk-catering {
   p {
     color: var(--hm-grey);
   }
+}
+.hm-section-features {
+  margin-top: 1em;
 };
 
 .hm-section-features__feature {
@@ -26,7 +28,6 @@
     width: 90%
   }
 }
-
 .hm-section-apps {
   background-color: #EEEEEE;
   overflow: hidden;
