--- a/www.hookamonk.com/src/stylesheets/typography.scss
+++ b/www.hookamonk.com/src/stylesheets/typography.scss
@@ -53,6 +53,8 @@ ul.hm-formatted {
   li {
     list-style: initial;
     margin-bottom: 0.5em;
+    color: var(--hm-grey);
+    line-height: 1.8;
   }
 }
 
