[www.hookamonk.com] fix og-image url fix

--- a/www.hookamonk.com/src/html/catering/index.njk
+++ b/www.hookamonk.com/src/html/catering/index.njk
@@ -17,7 +17,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@topmonks">
   <meta name="twitter:title" property="og:title" content="Game changer in hookah.">
-  <meta name="twitter:image" property="og:image" content="https://www.hookamonk.com/assets/og-image.jpg">
+  <meta name="twitter:image" property="og:image" content="https://www.hookamonk.com/og-image.jpg">
   <meta property="og:type" content="company">
   <meta property="og:url" content="https://www.hookamonk.com/">
   <meta property="og:site_name" content="hookamonk.com">
