[www.hookamonk.com] copywriting fixes

--- a/www.hookamonk.com/src/html/catering/index.njk
+++ b/www.hookamonk.com/src/html/catering/index.njk
@@ -308,15 +308,15 @@
           <li>Track tobaccos you've tried and keep them in diary</li>
           <li>Earn hookacoins</li>
           <p>
-            <a href="https://apps.apple.com/cz/app/session-monk/id1489139811" title="Hookamonk mobile app available in apple app store">
-              <img alt="[photo] Hookamonk mobile app available in apple app store"
+            <a href="https://apps.apple.com/cz/app/session-monk/id1489139811" title="Hookamonk mobile app available on Apple App Store">
+              <img alt="[photo] Hookamonk mobile app available on Apple App Store"
                    src="{{ "hookamonk.com/img_appstore.png" | cloudinaryUrl(width=209) }}"
                    srcset="{{ "hookamonk.com/img_appstore.png" | cloudinaryUrl(width=209) }} 1x,
                      {{ "hookamonk.com/img_appstore.png" | cloudinaryUrl(width=209,dpr=1.5) }} 1.5x,
                      {{ "hookamonk.com/img_appstore.png" | cloudinaryUrl(width=209,dpr=2) }} 2x" />
             </a>
-            <a href="https://play.google.com/store/apps/details?id=com.topmonks.sessionmonk" title="Hookamonk mobile app available in google play">
-              <img alt="[photo] Hookamonk mobile app available in google play"
+            <a href="https://play.google.com/store/apps/details?id=com.topmonks.sessionmonk" title="Hookamonk mobile app available on Google Play">
+              <img alt="[photo] Hookamonk mobile app available on Google Play"
                    src="{{ "hookamonk.com/img_google_play.png" | cloudinaryUrl(width=209) }}"
                    srcset="{{ "hookamonk.com/img_google_play.png" | cloudinaryUrl(width=209) }} 1x,
                        {{ "hookamonk.com/img_google_play.png" | cloudinaryUrl(width=209,dpr=1.5) }} 1.5x,
