--- a/www.hookamonk.com/src/stylesheets/typography.scss
+++ b/www.hookamonk.com/src/stylesheets/typography.scss
@@ -63,12 +63,12 @@ ul.hm-formatted {
   font-weight: 400;
   font-size: 3em;
   @media screen and (max-width: 478px) {
-    margin-bottom: 0.5em;
+    margin-bottom: 0em;
   }
 }
 h3.hm-h2 {
   @media screen and (max-width: 478px) {
     font-size: 2em;
-    margin-top: 0;
+    margin-top: 1em;
   }
 }
