--- a/www.hookamonk.com/src/html/layouts/main.njk
+++ b/www.hookamonk.com/src/html/layouts/main.njk
@@ -16,11 +16,10 @@
   <link rel="preload" as="script" href="https://www.googletagmanager.com/gtag/js?id=UA-51368639-11">
   {% block preload %}{% endblock %}
 
-{#  <!--[if lt IE 9]>#}
-{#  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>#}
-{#  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>#}
-{#  <![endif]-->#}
-
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <![endif]-->
+  <link href="favicon-small.jpg" rel="shortcut icon" type="image/x-icon">
   {% include "../components/work-sans.njk" %}
   {{ css("typography") }}
   {{ css("main") }}
