[www.hookamonk.com] GTM code updated

--- a/www.hookamonk.com/src/html/index.njk
+++ b/www.hookamonk.com/src/html/index.njk
@@ -21,27 +21,6 @@
   <meta property="og:type" content="company">
   <meta property="og:url" content="https://www.hookamonk.com/">
   <meta property="og:site_name" content="hookamonk.com">
-
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-51368639-11"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'UA-51368639-11');
-  </script>
-
-  <!-- Hotjar Tracking Code for https://www.hookamonk.com/ -->
-  <script>
-    (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:2128760,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-  </script>
   <style>
     body {
       height: 100vh;
@@ -76,12 +55,14 @@
     .hm-hero__header {
       padding-top: 20vh;
     }
+    .hm-button {
+      margin: 0 auto;
+    }
     @media screen and (max-width: 839px) {
       .hm-hero__header {
         padding-top: 10vh;
       }
     }
-
   </style>
 {% endblock %}
 
