--- a/www.hookamonk.com/src/html/layouts/main.njk
+++ b/www.hookamonk.com/src/html/layouts/main.njk
@@ -19,6 +19,16 @@
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <![endif]-->
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-51368639-11"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-51368639-11');
+  </script>
+
   <link href="favicon-small.jpg" rel="shortcut icon" type="image/x-icon">
   {% include "../components/work-sans.njk" %}
   {{ css("typography") }}
@@ -31,10 +41,14 @@
 <main>
   {% block content %}{% endblock %}
 </main>
+{% block footer %}{% endblock %}
 
 {{ spriteTarget() }}
 
 {% block javascript %}{% endblock %}
-
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N3RNTWG"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 </body>
 </html>
