--- a/www.hookamonk.com/src/stylesheets/typography.scss
+++ b/www.hookamonk.com/src/stylesheets/typography.scss
@@ -3,6 +3,8 @@
   --hm-white: #ffffff;
   --hm-grey: #5e5e5e;
   --hm-violet: #502CCC;
+  --hm-orange: #ECA340;
+  --hm-orange-dark: #FF6056;
 }
 
 body {
