[www.hookamonk.com] Fix favicon path

--- a/www.hookamonk.com/src/html/layouts/main.njk
+++ b/www.hookamonk.com/src/html/layouts/main.njk
@@ -29,7 +29,7 @@
     gtag('config', 'UA-51368639-11');
   </script>
 
-  <link href="favicon-small.jpg" rel="shortcut icon" type="image/x-icon">
+  <link href="/favicon-small.jpg" rel="shortcut icon" type="image/x-icon">
   {% include "../components/work-sans.njk" %}
   {{ css("typography") }}
   {{ css("main") }}
