--- a/www.hookamonk.com/src/html/layouts/main.njk
+++ b/www.hookamonk.com/src/html/layouts/main.njk
@@ -13,7 +13,7 @@
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
   <link rel="preconnect" href="https://res.cloudinary.com">
   {% block preconnect %}{% endblock %}
-  <link rel="preload" as="script" href="https://www.googletagmanager.com/gtag/js?id=UA-51368639-11">
+  <link rel="preload" as="script" href="https://www.googletagmanager.com/gtag/js?id=GTM-N3RNTWG">
   {% block preload %}{% endblock %}
 
   <!--[if lt IE 9]>
