--- a/www.topmonks.com/src/html/index.njk
+++ b/www.topmonks.com/src/html/index.njk
@@ -88,32 +88,25 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-              <a href="https://apify.com/enterprise"
-                 title="Apify homepage">{{ sprite('img_logo_apify', 'Apify') }}
-              </a>
-            </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-              <a href="https://www.pricefx.eu/site/"
-                 title="Pricefx homepage">{{ sprite('img_logo_pricefx', 'Pricefx') }}
-              </a>
-            </div>
-
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-              <a href="https://www.erstegroupit.com/"
-                 title="Erste Group homepage">{{ sprite('img_logo_erste-group', 'Erste Group') }}</a>
-            </div>
-
-
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-              <a href="https://zonky.cz/" title="Zonky homepage">{{ sprite('img_logo_zonky', 'Zonky') }}</a>
-            </div>
-
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-              <a href="https://www.adler.info/"
-                 title="Adler homepage">{{ sprite('img_logo_adler', 'Adler') }}</a>
-            </div>
+          <div class="partners">
+            <a href="https://apify.com/enterprise"
+               title="Apify homepage">{{ sprite('img_logo_apify', 'Apify') }}
+            </a>
+            <a href="https://www.pricefx.eu/site/"
+               title="Pricefx homepage">{{ sprite('img_logo_pricefx', 'Pricefx') }}
+            </a>
+            <a href="https://www.byzkids.com/"
+               title="Byzkids homepage">{{ sprite('img_logo_byzkids', 'Bizkids') }}
+            </a>
+            <a href="https://www.erstegroupit.com/"
+               title="Erste Group homepage">{{ sprite('img_logo_erste-group', 'Erste Group') }}
+            </a>
+            <a href="https://zonky.cz/"
+               title="Zonky homepage">{{ sprite('img_logo_zonky', 'Zonky') }}
+            </a>
+            <a href="https://www.adler.info/"
+               title="Adler homepage">{{ sprite('img_logo_adler', 'Adler') }}
+            </a>
           </div>
         </div>
       </div>
