--- a/www.hookamonk.com/src/stylesheets/catering.scss
+++ b/www.hookamonk.com/src/stylesheets/catering.scss
@@ -119,3 +119,14 @@
     order: 1;
   }
 }
+.hm-video-wrapper {
+  overflow: hidden;
+  width: 100%;
+}
+.hm-overview-video {
+  @media screen and (max-width: 479px) {
+    width: 600px;
+    display: block;
+    margin: 0 auto;
+  }
+}
