[www.hookamonk.com] overview section video

--- a/www.hookamonk.com/src/html/catering/index.njk
+++ b/www.hookamonk.com/src/html/catering/index.njk
@@ -270,20 +270,18 @@
       </div>
     </div>
   </div>
-{#  <div class="mdc-layout-grid">#}
-{#    <div class="mdc-layout-grid__inner tm-layout-wrapper">#}
-{#      <div#}
-{#        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12" style="text-align: center">#}
-{#        <h2 class="hm-h2">Overview</h2>#}
-{#        <div class="hm-video-wrapper">#}
-{#          <video class="hm-overview-video" autoplay loop muted>#}
-{#            <source src="https://res.cloudinary.com/topmonks/video/upload/hookamonk.com/hookamonk_animace.mp4" type="video/mp4">#}
-{#            Your browser does not support the video tag.#}
-{#          </video>#}
-{#        </div>#}
-{#      </div>#}
-{#    </div>#}
-{#  </div>#}
+  <div class="mdc-layout-grid">
+    <div class="mdc-layout-grid__inner tm-layout-wrapper">
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12" style="text-align: center">
+        <h2 class="hm-h2">Overview</h2>
+          <video class="hm-overview-video" autoplay loop muted>
+            <source src="https://res.cloudinary.com/topmonks/video/upload/f_mp4,w_800/v1607417422/hookamonk.com/hookamonk_animace.mov" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+    </div>
+  </div>
   <div class="hm-section-apps">
     <div class="mdc-layout-grid tm-bgnd-wrapper">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
