--- a/www.hookamonk.com/src/html/catering/index.njk
+++ b/www.hookamonk.com/src/html/catering/index.njk
@@ -277,6 +277,8 @@
         <h2 class="hm-h2">Overview</h2>
           <video class="hm-overview-video" autoplay loop muted>
             <source src="https://res.cloudinary.com/topmonks/video/upload/f_mp4,w_800/v1607417422/hookamonk.com/hookamonk_animace.mov" type="video/mp4">
+            <source src="https://res.cloudinary.com/topmonks/video/upload/f_webm,w_800/v1607417422/hookamonk.com/hookamonk_animace.mov" type="video/webm">
+            <source src="https://res.cloudinary.com/topmonks/video/upload/f_ogg,w_800/v1607417422/hookamonk.com/hookamonk_animace.mov" type="video/ogg">
             Your browser does not support the video tag.
           </video>
         </div>
