--- a/www.hookamonk.com/src/stylesheets/catering.scss
+++ b/www.hookamonk.com/src/stylesheets/catering.scss
@@ -119,7 +119,13 @@
     order: 1;
   }
 }
+.hm-video-wrapper {
+  overflow: hidden;
+}
 .hm-overview-video {
+  margin-bottom: -7px;
+  display: inline-block;
+
   @media screen and (max-width: 800px) {
     width: 100%;
   }
