[cbx.cz] font preload

--- a/cbx.cz/src/stylesheets/main.scss
+++ b/cbx.cz/src/stylesheets/main.scss
@@ -81,7 +81,7 @@ body {
 }
 
 input {
-  font-family: "Andale Mono";
+  font-family: "Andale Mono", serif;
   border: none;
   border-bottom: dashed 1px var(--color-white);
   min-height: 44px;
