--- a/zive.tv/src/html/topmonks-caffe/index.njk
+++ b/zive.tv/src/html/topmonks-caffe/index.njk
@@ -180,8 +180,8 @@
         fill="#fff"/>
     </svg>
     <h1>
-      <b>TopMonks Caffè: Weby v roce 2020</b>
-      <small>Živé vysílání - úterý 1. prosince 2020 od 19.00</small>
+      <b>TopMonks Caffè: Z naší startupové kuchyně</b>
+      <small>Živé vysílání - úterý 5. ledna 2021 od 19.00</small>
     </h1>
   </header>
   <div class="restream-box" style="--aspect-ratio: 16/9;">
